Sidebar's visibility no longer affects page content

--- a/src/styles/layout/sidebar/styles.less
+++ b/src/styles/layout/sidebar/styles.less
@@ -14,17 +14,6 @@
     flex: 1 1 100%;
     max-width: 0;
     transition: max-width 0.25s;
-
-    & + .page {
-      transition: transform 0.25s;
-    }
-
-    .sidebar-visible & {
-
-      & + .page {
-        transform: translateX(@sidebar-width);
-      }
-    }
   }
 
   // Sidebar
@@ -385,20 +374,6 @@
       // Sidebar Wrapper
       .sidebar-wrapper {
 
-        .sidebar-visible & {
-
-          & + .page {
-            transform: translateX(@sidebar-width-screen-medium);
-          }
-        }
-
-        .sidebar-visible.sidebar-docked & {
-
-          & + .page {
-            transform: translateX(0);
-          }
-        }
-
         .sidebar-docked & {
           max-width: @sidebar-width-screen-medium;
         }
@@ -495,13 +470,6 @@
       // Sidebar Wrapper
       .sidebar-wrapper {
 
-        .sidebar-visible & {
-
-          & + .page {
-            transform: translateX(@sidebar-width-screen-large);
-          }
-        }
-
         .sidebar-docked & {
           max-width: @sidebar-width-screen-large;
         }
@@ -582,13 +550,6 @@
 
       // Sidebar Wrapper
       .sidebar-wrapper {
-
-        .sidebar-visible & {
-
-          & + .page {
-            transform: translateX(@sidebar-width-screen-jumbo);
-          }
-        }
 
         .sidebar-docked & {
           max-width: @sidebar-width-screen-jumbo;
